--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -29,6 +29,13 @@
         <p><a class="btn btn-default" href="{% url 'lista_candidatos' %}">Acessar &raquo;</a></p>
         <!-- <p><a class="btn btn-default">Em construção &raquo;</a></p> -->
     </div>
+    
+    <div class="col-md-4">
+        <h2>Lista de locais</h2>
+        <p>Veja os local da prova.</p>
+        <p><a class="btn btn-default" href="{% url 'lista_locais' %}">Acessar &raquo;</a></p>
+        <!-- <p><a class="btn btn-default">Em construção &raquo;</a></p>-->
+    </div>
 </div>
 
 {% endblock %}
